template.json
{
  "AWSTemplateFormatVersion" : "2010-09-09",
  "Description" : "CloudConductor pattern template",

  "Parameters" : {
    "KeyName" : {
      "Description" : "Name of an existing EC2/OpenStack KeyPair to enable SSH access to the instances",
      "Type" : "String",
      "MinLength" : "1",
      "MaxLength" : "255",
      "AllowedPattern" : "[\\x20-\\x7E]*",
      "ConstraintDescription" : "can contain only ASCII characters."
    },
    "SSHLocation" : {
      "Description" : "The IP address range that can be used to SSH to the EC2/OpenStack instances",
      "Type" : "String",
      "MinLength" : "9",
      "MaxLength" : "18",
      "Default" : "0.0.0.0/0",
      "AllowedPattern" : "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription" : "must be a valid IP CIDR range of the form x.x.x.x/x."
    },
    "LogInstanceType" : {
      "Description" : "LogServer instance type",
      "Type" : "String",
      "Default" : "t2.small"
    },
    "LogImageId" : {
      "Description" : "[computed] LogServer Image Id. This parameter is automatically filled by CloudConductor.",
      "Type" : "String"
    },
    "VpcId" : {
      "Description" : "[computed] The Vpc Id which is used by platform pattern.",
      "Type" : "String"
    },
    "SubnetId" : {
      "Description" : "[computed] The Subnet Id which is used by platform pattern.",
      "Type" : "String"
    },
    "ClusterAddresses" : {
      "Description" : "[computed] Private IP Addresses to join cluster.",
      "Type" : "String"
    },
    "SharedSecurityGroup" : {
      "Description" : "[computed] The SecurityGroup which is used by platform pattern.",
      "Type" : "String"
    },
    "CloudConductorLocation" : {
      "Description" : "The IP address range of CloudConductor server to enable Consul api access to frontend instance.",
      "Type" : "String",
      "MinLength": "9",
      "MaxLength": "18",
      "Default": "0.0.0.0/0",
      "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
      "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
    }
  },

  "Mappings" : {
  },

  "Resources" : {

    "LogServer" : {
      "Type" : "AWS::EC2::Instance",
      "Metadata" : {
        "Role" : "log",
        "ClusterAddresses": { "Ref": "ClusterAddresses" }
      },
      "Properties" : {
        "ImageId" : { "Ref" : "LogImageId" },
        "InstanceType" : { "Ref" : "LogInstanceType" },
        "KeyName" : { "Ref" : "KeyName" },
        "NetworkInterfaces" : [{
           "DeviceIndex" : "0",
           "NetworkInterfaceId" : { "Ref" : "LogNetworkInterface" }
        }],
        "UserData" : { "Fn::Base64" : { "Fn::Join" : ["", [
          "#!/bin/sh -v\n",
          "# Helper function\n",
          "function error_exit\n",
          "{\n",
          "  /opt/aws/bin/cfn-signal -e 1 -r \"$1\" '", { "Ref" : "LogWaitHandle" }, "'\n",
          "  exit 1\n",
          "}\n",
          "# Set Parameters\n",
          "/bin/echo 'ROLE=log' >> /opt/cloudconductor/config\n",
          "/bin/echo 'STACK_NAME=", { "Ref": "AWS::StackName" }, "' >> /opt/cloudconductor/config\n",
          "/bin/echo 'RESOURCE_NAME=LogServer' >> /opt/cloudconductor/config\n",
          "/bin/echo 'REGION=", { "Ref": "AWS::Region" }, "' >> /opt/cloudconductor/config\n",
          "# Run Consul\n",
          "# this process is required because of init sequence.\n",
          "/etc/init.d/consul start || error_exit 'Failed to start consul agent'\n",
          "# Wait member-join event\n",
          "host_name=`hostname`\n",
          "for i in `seq 10`; do\n",
          "  if [ ! -z \"`/usr/local/bin/consul members | grep ${host_name}`\" ]; then\n",
          "    # Send success signal\n",
          "    /opt/aws/bin/cfn-signal -e 0 -r 'LogServer Setup complete' '", { "Ref" : "LogWaitHandle" }, "'\n",
          "    exit 0\n",
          "  fi\n",
          "  sleep 1\n",
          "done\n",
          "/opt/aws/bin/cfn-signal -e 1 -r \"$1\" '", { "Ref" : "LogWaitHandle" }, "'\n",
          "exit 1\n"
        ]]}},
        "Tags" : [{"Key": "Name", "Value": "LogServer"}, {"Key": "Role", "Value": "log"}]
      }
    },
    "LogNetworkInterface" : {
      "Type" : "AWS::EC2::NetworkInterface",
      "Properties" : {
        "AssociatePublicIpAddress" : true,
        "GroupSet" : [{"Ref" : "SharedSecurityGroup"}, {"Ref" : "LogSecurityGroup"}],
        "SubnetId" : { "Ref" : "SubnetId" }
      }
    },
    "LogSecurityGroup" : {
      "Type" : "AWS::EC2::SecurityGroup",
      "Properties" : {
        "GroupDescription" : "Enable td-agent access",
        "VpcId" : { "Ref" : "VpcId" },
        "SecurityGroupIngress" : [
          {"IpProtocol" : "tcp", "FromPort" : "24224", "ToPort" : "24224", "CidrIp" : "10.0.0.0/16"},
          {"IpProtocol" : "udp", "FromPort" : "24224", "ToPort" : "24224", "CidrIp" : "10.0.0.0/16"}
        ]
      }
    },
    "SharedSecurityGroupInboundRuleFluentd": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "tcp",
        "FromPort": "24224",
        "ToPort": "24224",
        "SourceSecurityGroupId": { "Ref" : "LogSecurityGroup" },
        "GroupId": { "Ref" : "SharedSecurityGroup" }
      }
    },
    "SharedSecurityGroupInboundRuleHeartbeat": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties":{
        "IpProtocol": "udp",
        "FromPort": "24224",
        "ToPort": "24224",
        "SourceSecurityGroupId": { "Ref" : "LogSecurityGroup" },
        "GroupId": { "Ref" : "SharedSecurityGroup" }
      }
    },
    "LogWaitHandle" : {
      "Type" : "AWS::CloudFormation::WaitConditionHandle"
    },
    "LogWaitCondition" : {
      "Type" : "AWS::CloudFormation::WaitCondition",
      "DependsOn" : "LogServer",
      "Properties" : {
        "Handle" : { "Ref" : "LogWaitHandle" },
        "Timeout" : "600"
      }
    }
  },
  "Outputs" : {
  }
}
